--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,12 @@
     "require": {
         "php": "^8.3",
         "symfony/http-foundation": "^7.2",
-        "symfony/routing": "^7.2"
+        "symfony/routing": "^7.2",
+        "symfony/http-kernel": "^7.2"
+    },
+    "autoload": {
+        "psr-4": {
+            "App\\": "src/"
+        }
     }
 }
